--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
       table,
       th,
       td {
-        border: 2px solid black;
+        width: 50%;
+        margin: auto;
+        border: 2px solid rgb(68, 18, 0);
         border-collapse: collapse;
-        padding: 10px;
+        padding: 20px;
+        text-align: center;
+        background-image: linear-gradient(to bottom right, red, blue, yellow);
       }
     </style>
   </head>
-  <body style="background-color: darkgrey" , bor>
+  <body style="background-color: darkgrey">
     <script src="index.js"></script>
 
     <table>
@@ -55,5 +59,7 @@
         </tr>
       </tbody>
     </table>
+
+    <span style="background-color: blue !important">Keep Learning</span>
   </body>
 </html>
