--- a/index.html
+++ b/index.html
@@ -7,59 +7,30 @@
     <link rel="stylesheet" href="style.css" />
 
     <style>
-      table,
-      th,
-      td {
-        width: 50%;
-        margin: auto;
-        border: 2px solid rgb(68, 18, 0);
-        border-collapse: collapse;
-        padding: 20px;
-        text-align: center;
-        background-image: linear-gradient(to bottom right, red, blue, yellow);
-      }
+.Parent{
+
+  background-color: aqua;
+  position: fixed;
+  top: 30px;
+
+
+
+}
+
     </style>
-  </head>
-  <body style="background-color: darkgrey">
-    <script src="index.js"></script>
+   <body>
+<div class="Parent">
 
-    <table>
-      <thead>
-        <th colspan="0">State of health</th>
-        <th colspan="2">Fasting Value</th>
-        <th>After Remaining</th>
-      </thead>
+This is div
+  
+</div>
+<div style="padding-bottom: 200%;">Generating random paragraphs can be an excellent way for writers to get their creative flow going at the beginning of the day. The writer has no idea what topic the random paragraph will be about when it appears. This forces the writer to use creativity to complete one of three common writing challenges. The writer can use the paragraph as the first one of a short story and build upon it. A second option is to use the random paragraph somewhere in a short story they create. The third option is to have the random paragraph be the ending paragraph in a short story. No matter which of these challenges is undertaken, the writer is forced to use creativity to incorporate the paragraph into their writing.</div>
+  
 
-      <tbody>
-        <tr>
-          <th></th>
-          <th>Minimum</th>
-          <th>Normal</th>
-          <th>2 hours of Eating</th>
-        </tr>
-        <tr>
-          <td>healthy</td>
-          <td>70</td>
-          <td>100</td>
-          <td>Less than 140</td>
-        </tr>
 
-        <tr>
-          <td>Pre-Diabetes</td>
-          <td>101</td>
-          <td>126</td>
-          <td>140 to 200</td>
-        </tr>
+   </body>  
+    
 
-        <tr>
-          <td>Diabetes</td>
-          <td>More than 126</td>
-          <td>Not Applicable</td>
-          <td>More than 200</td>
-        </tr>
-      </tbody>
-    </table>
+ 
+</html> 
 
-    <span style="background-color: blue !important">Keep Learning</span>
-  </body>
-</html>
