--- a/index.html
+++ b/index.html
@@ -1,36 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-
     <style>
-.Parent{
-
-  background-color: aqua;
-  position: fixed;
-  top: 30px;
-
-
-
-}
-
+        .color-box {
+            width: 150px;
+            height: 150px;
+            background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet);
+            border: 2px solid black;
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+        }
     </style>
-   <body>
-<div class="Parent">
-
-This is div
-  
-</div>
-<div style="padding-bottom: 200%;">Generating random paragraphs can be an excellent way for writers to get their creative flow going at the beginning of the day. The writer has no idea what topic the random paragraph will be about when it appears. This forces the writer to use creativity to complete one of three common writing challenges. The writer can use the paragraph as the first one of a short story and build upon it. A second option is to use the random paragraph somewhere in a short story they create. The third option is to have the random paragraph be the ending paragraph in a short story. No matter which of these challenges is undertaken, the writer is forced to use creativity to incorporate the paragraph into their writing.</div>
-  
+</head>
+<body>
+    <script src="index.js"></script>
 
 
-   </body>  
-    
 
- 
-</html> 
+<div class="color-box"></div>
 
+</body>
+</html>
