--- a/index.html
+++ b/index.html
@@ -1,55 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
 
-    <style>
-      table,
-      th,
-      td {
-        border: 1px solid black;
-        border-collapse: collapse;
-      }
-    </style>
-  </head>
-  <body>
-    <script src="index.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
 
-    <table>
-      <thead>
-        <th>State of Health</th>
-        <th colspan="2">Fasting value</th>
-        <th>After Remaining</th>
-      </thead>
+ 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="index.css">
 
-      <tbody>
-        <tr>
-          <th></th>
-          <th>Minimum</th>
-          <th>Normal</th>
-          <th>2 hours of Eating</th>
-        </tr>
-        <tr>
-          <td>Healthy</td>
-          <td>70</td>
-          <td>100</td>
-          <td>Less than 140</td>
-        </tr>
-        <tr>
-          <td>Pre Diabetes</td>
-          <td>101</td>
-          <td>126</td>
-          <td>140 to 200</td>
-        </tr>
-        <tr>
-          <td>Diabetes</td>
-          <td>More than 126</td>
-          <td>Not Applicable</td>
-          <td>More than 200</td>
-        </tr>
-      </tbody>
-    </table>
-  </body>
+
+<body>
+
+<div class="box">
+    <div class="container">
+         <div class="row">
+             <div class="col-md-4">
+                  <div class="smallbox">
+
+                    <i class="fa fa-building fa-3x" ></i>
+                    <h3>Urbanrise</h3>
+                    <div class="cont">
+                       <span>Largest Real Estate Developer in South India, offers premium residential projects for sale in Bengaluru, Hyderabad, and Chennai. </span>
+
+                    </div>
+                        <a href="https://www.urbanrise.in/" target="_blank">Learn More </a>
+                  </div>
+             </div>
+             <div class="col-md-4">
+                  <div class="smallbox">
+
+                    <i class="fa fa-building fa-3x" ></i>
+                    <h3>Urbanrise</h3>
+                    <div class="cont">
+                       <span>Largest Real Estate Developer in South India, offers premium residential projects for sale in Bengaluru, Hyderabad, and Chennai. </span>
+
+                    </div>
+                        <a href="https://www.urbanrise.in/" target="_blank">Learn More </a>
+                  </div>
+             </div>
+             <div class="col-md-4">
+                  <div class="smallbox">
+
+                    <i class="fa fa-building fa-3x" ></i>
+                    <h3>Urbanrise</h3>
+                    <div class="cont">
+                       <span>Largest Real Estate Developer in South India, offers premium residential projects for sale in Bengaluru, Hyderabad, and Chennai. </span>
+
+                    </div>
+                        <a href="https://www.urbanrise.in/" target="_blank">Learn More </a>
+                  </div>
+             </div>
+             <div class="col-md-4">
+                  <div class="smallbox">
+
+                    <i class="fa fa-building fa-3x" ></i>
+                    <h3>Urbanrise</h3>
+                    <div class="cont">
+                       <span>Largest Real Estate Developer in South India, offers premium residential projects for sale in Bengaluru, Hyderabad, and Chennai. </span>
+
+                    </div>
+                        <a href="https://www.urbanrise.in/" target="_blank">Learn More </a>
+                  </div>
+             </div>
+             <div class="col-md-4">
+                  <div class="smallbox">
+
+                    <i class="fa fa-building fa-3x" ></i>
+                    <h3>Urbanrise</h3>
+                    <div class="cont">
+                       <span>Largest Real Estate Developer in South India, offers premium residential projects for sale in Bengaluru, Hyderabad, and Chennai. </span>
+
+                    </div>
+                        <a href="https://www.urbanrise.in/" target="_blank">Learn More </a>
+                  </div>
+             </div>
+             <div class="col-md-4">
+                  <div class="smallbox">
+
+                    <i class="fa fa-building fa-3x" ></i>
+                    <h3>Urbanrise</h3>
+                    <div class="cont">
+                       <span>Largest Real Estate Developer in South India, offers premium residential projects for sale in Bengaluru, Hyderabad, and Chennai. </span>
+
+                    </div>
+                        <a href="https://www.urbanrise.in/" target="_blank">Learn More </a>
+                  </div>
+             </div>
+         </div>
+    </div>
+</div>
+
+
+
+</body>
+
 </html>
