--- a/index.html
+++ b/index.html
@@ -1,21 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <div class="box">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-xs-4 mr-5">
+            <i style="color: white" class="fa fa-circle-thin fa-5x"></i>
+          </div>
 
- 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="index.css">
+          <div class="col-xs-8">
+            <div class="cont">
+              <h1
+                style="
+                  font-family: Cambria, Cochin, Georgia, Times,
+                    'Times New Roman', serif;
+                  color: rgb(201, 70, 70);
+                  font-size: 60px;
+                "
+              >
+                <b>OBESITY</b>
+              </h1>
+              <h6
+                style="
+                  font-family: 'Lucida Sans', 'Lucida Sans Regular',
+                    'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana,
+                    sans-serif;
+                  color: white;
+                "
+              >
+                CHILDHOOD STATISTICS
+              </h6>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="smallbox col-6">
+            <div>
+              <i class="fa fa-building fa-3x"></i>
+              <h1
+                style="
+                  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,
+                    sans-serif;
+                "
+              >
+                <b>1 IN 3</b>
+              </h1>
+              <div class="cont">
+                <span
+                  >Largest Real Estate Developer in South India, offers premium
+                  residential projects for sale in Bengaluru, Hyderabad, and
+                  Chennai.
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="smallbox1 col-6">
+            <div>
+              <i class="fa fa-building fa-3x"></i>
+              <h3>Urbanrise</h3>
+              <div class="cont">
+                <span
+                  >Largest Real Estate Developer in South India, offers premium
+                  residential projects for sale in Bengaluru, Hyderabad, and
+                  Chennai.
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-
-<body>
-
-<div class="box">
+    <!-- <div class="box">
     <div class="container">
          <div class="row">
              <div class="col-md-4">
@@ -30,8 +108,8 @@
                         <a href="https://www.urbanrise.in/" target="_blank">Learn More </a>
                   </div>
              </div>
-             <div class="col-md-4">
-                  <div class="smallbox">
+             <div class="col-md-4">        
+                  <div class="smallbox">                  
 
                     <i class="fa fa-building fa-3x" ></i>
                     <h3>Urbanrise</h3>
@@ -93,9 +171,6 @@
          </div>
     </div>
 </div>
-
-
-
-</body>
-
+ -->
+  </body>
 </html>
