--- a/index.html
+++ b/index.html
@@ -11,21 +11,47 @@
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
-    <link
+    <link 
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
       integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      referrerpolicy="no-referrer"    
     />
     <link rel="stylesheet" href="index.css" />
   </head>
+
   <body>
-    <div class="box">
+    <script src="index.js"></script>
+
+    <label for="firstname">Firstname</label>
+    <br />
+    <input type="text" id="firstname" />
+    <br />
+    <label for="middlename">Middlename</label>
+    <br />
+    <input type="text" id="middlename" />
+    <br />
+    <label for="lastname">Lastname</label>
+    <br />
+    <input type="text" id="lastname" />
+    <br />
+    <label for="mail">Email</label>
+    <br />
+    <input type="email" id="mail" />
+    <br />
+    <label for="pass">Password</label>
+    <br />
+    <input type="password" id="pass" />
+    <br />
+    <button onclick="valid()">Submit</button>
+    <div id="name"></div>
+
+    <!-- <div class="box">
       <div class="container-fluid">
         <div class="row justify-content-center">
-          <div class="col-xs-4 mr-5">
-            <i style="color: white" class="fa fa-circle-thin fa-5x"></i>
+          <div class="col-xs-4 mx-3" style="display: flex; align-items: center">
+            <i style="color: white" class="fa fa-users fa-3x logo"></i>
           </div>
 
           <div class="col-xs-8">
@@ -55,28 +81,27 @@
         </div>
       </div>
       <div class="container">
-        <div class="row">
-          <div class="smallbox col-6">
-            <div>
-              <i class="fa fa-building fa-3x"></i>
-              <h1
-                style="
-                  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,
-                    sans-serif;
-                "
-              >
-                <b>1 IN 3</b>
-              </h1>
-              <div class="cont">
-                <span
-                  >Largest Real Estate Developer in South India, offers premium
-                  residential projects for sale in Bengaluru, Hyderabad, and
-                  Chennai.
-                </span>
-              </div>
+        <div class="row justify-content-center">
+          <div class="smallbox col-sm-6 col-12">
+            <div style="width: 100%">
+              <i class="fa fa-male fa-3x" style="color: rgb(40, 39, 39)"></i>
+              <i class="fa fa-male fa-3x" style="color: rgb(40, 39, 39)"></i>
+              <i class="fa fa-female fa-3x" style="color: rgb(205, 68, 68)"></i>
+            </div>
+            <h1
+              style="
+                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,
+                  sans-serif;
+                font-size: 60px;
+              "
+            >
+              <b>1 IN 3</b>
+            </h1>
+            <div class="cont">
+              <span> Child and adolescents (ages 2-19) </span>
             </div>
           </div>
-          <div class="smallbox1 col-6">
+          <div class="smallbox1 col-sm-6 col-12">
             <div>
               <i class="fa fa-building fa-3x"></i>
               <h3>Urbanrise</h3>
@@ -91,7 +116,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- <div class="box">
     <div class="container">
